Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,9 @@ title: "Introduction"
 description: "Welcome to the home of your new documentation"
 ---
 
+Welcome to MasteringX — the easiest way for creators to build and sell beautiful, professional-grade online courses without writing a single line of code.
 
+Whether you're a coach, educator, YouTuber, or subject-matter expert, MasteringX helps you bring your knowledge to life with minimal setup and maximum focus on your content.
 ## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
