--- a/index.mdx
+++ b/index.mdx
@@ -1,39 +1,26 @@
 ---
 title: "Introduction"
-description: "Welcome to the home of your new documentation"
 ---
 
-Welcome to MasteringX — the easiest way for creators to build and sell beautiful, professional-grade online courses without writing a single line of code.
+Welcome to **MasteringX**, the fastest way for creators to create and sell stunning, professional-quality online courses without writing a single line of code.
 
-Whether you're a coach, educator, YouTuber, or subject-matter expert, MasteringX helps you bring your knowledge to life with minimal setup and maximum focus on your content.
-## Setting up
+Whether you're a coach, instructor,  or subject-matter expert, **MasteringX **allows you to bring your expertise to life with little setup and maximum attention on what you're teaching.
 
-The first step to world-class documentation is setting up your editing environments.
+**MasteringX **aims to deliver a contemporary, fast, and powerful video-delivering platform built on Laravel, VueJS, and TailwindCSS. It is intended to be simple to use, adaptable, and scalable.
 
-<CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
-  </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+**Who is it for?**
 
-## Make it yours
+- Authors
+- Teachers
+- Indie creators
+- Anyone building a learning product
 
-Update your docs to your brand and add valuable content for the best user conversion.
+### Key Features
 
-<CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+- **Course Structure**: Modules, lessons, and updates out of the box
+- **Markdown Editing**: Although the platform is video-based, your lesson descriptions or transcriptions are in Markdown.
+- **Article system**: You can also create andedit, delete, publish articles from draft
+- **Stripe Integration**: Accept payments easily
+- **Access Control**: Publish free (previewable) or paid content
+
+Thank you for choosing **MasteringX**❤
