Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,9 +4,9 @@ title: "Introduction"
 
 Welcome to **MasteringX**, the fastest way for creators to create and sell stunning, professional-quality online courses without writing a single line of code.
 
-Whether you're a coach, instructor,  or subject-matter expert, \*\*MasteringX \*\* allows you to bring your expertise to life with little setup and maximum attention on what you're teaching.
+Whether you're a coach, instructor,  or subject-matter expert, **MasteringX** allows you to bring your expertise to life with little setup and maximum attention on what you're teaching.
 
-\*\*MasteringX \*\* aims to deliver a contemporary, fast, and powerful video-delivering platform built on Laravel, VueJS, and TailwindCSS. It is intended to be simple to use, adaptable, and scalable.
+**MasteringX** aims to deliver a contemporary, fast, and powerful video-delivering platform built on Laravel, VueJS, and TailwindCSS. It is intended to be simple to use, adaptable, and scalable.
 
 **Who is it for?**
 
