--- a/index.mdx
+++ b/index.mdx
@@ -2,21 +2,15 @@
 title: "Introduction"
 ---
 
-Welcome to **MasteringX**, the fastest way for creators to create and sell stunning, professional-quality online courses without writing a single line of code.
+Welcome to **MasteringX**, the fastest way for creators to create and sell stunning, professional-quality video based courses without writing a single line of code.
 
 Whether you're a coach, instructor,  or subject-matter expert, **MasteringX** allows you to bring your expertise to life with little setup and maximum attention on what you're teaching.
 
 **MasteringX** aims to deliver a contemporary, fast, and powerful video-delivering platform built on Laravel, VueJS, and TailwindCSS. It is intended to be simple to use, adaptable, and scalable.
 
-**Who is it for?**
-
-- Authors
-- Teachers
-- Indie creators
-- Anyone building a learning product
 
 ### Key Features
-
+ # these features doesn/teaching sound right, fix them
 - **Course Structure**: Modules, lessons, and updates out of the box.
 - **Markdown Editing**: Although the platform is video-based, your lesson descriptions or transcriptions are in Markdown.
 - **Article system**: You can also create, edit, delete, and publish articles from drafts.
@@ -24,3 +18,4 @@ Whether you're a coach, instructor,  or subject-matter expert, **MasteringX** al
 - **Access Control**: Publish free (previewable) or paid content.
 
 Thank you for choosing **MasteringX** ❤
+
