--- a/features/demo.mdx
+++ b/features/demo.mdx
@@ -64,9 +64,15 @@ title: "Demo "
 
 Watch the video below for a full walkthrough of **MasteringX** in action.
 
-📺 **Watch the video:**  
-<iframe width="100%" height="500" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-
+📺 **Watch the video:**
+<video
+autoPlay
+muted
+controls
+playsInline
+className="w-full aspect-video rounded-xl"
+src="/demo.mp4"
+></video>
 > 💡 No live demo? No problem. This video will give you a clear picture of how the platform works end-to-end, including how users buy and consume your course content.
 
 
