--- a/index.mdx
+++ b/index.mdx
@@ -10,12 +10,36 @@ Whether you're a coach, instructor,  or subject-matter expert, **MasteringX** al
 
 
 ### Key Features
- # these features doesn/teaching sound right, fix them
-- **Course Structure**: Modules, lessons, and updates out of the box.
-- **Markdown Editing**: Although the platform is video-based, your lesson descriptions or transcriptions are in Markdown.
-- **Article system**: You can also create, edit, delete, and publish articles from drafts.
-- **Stripe Integration**: Accept payments easily.
-- **Access Control**: Publish free (previewable) or paid content.
+
+* **Clean, Powerful Admin Panel**
+
+  Manage your entire platform from a streamlined dashboard. Courses, lessons, payments, articles, and users all in one place.
+
+* **HLS-Optimized Video Streaming**
+
+    Deliver smooth, buffer-free streaming with **HLS (HTTP Live Streaming)** perfect playback across mobile, desktop, and slow networks. Upload once, stream like a pro.
+
+* **Structured Course Builder**
+ 
+    Create rich courses with modules, lessons, video uploads, and updates scaling your content over time with ease.
+
+* **Markdown Lesson Descriptions**
+
+    Each lesson supports Markdown for clean, readable descriptions, transcriptions, or SEO content. Text and video go hand in hand.
+
+* **Built-in Article System**
+
+    Publish educational blog posts, or SEO articles right from your dashboard and turn readers into paying students.
+
+* **Stripe-Powered Payments**
+
+    Launch monetized courses fast with secure global payments via Stripe. Supports one-time payments or subscriptions.
+
+* **Flexible Access Controls**
+
+    Offer free previews, locked lessons, or full premium access. Tailor visibility based on user access level.
+
+
 
 Thank you for choosing **MasteringX** ❤
 
