--- a/installation.mdx
+++ b/installation.mdx
@@ -111,7 +111,7 @@ docker compose down
 ```
 and restart it.
 ```bash
-docker compose -d up
+docker compose up -d
 ```
 From now on, you only need to run this command.
 
